scripts/k8s/template_wordpress/services.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress-mysql
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress-mysql
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-wordpress
  labels:
    app: wordpress-wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress-wordpress
  clusterIP: None
