scripts/k8s/template_wordpress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
spec:
  rules:
    - host: '${URL_WORDPRESS}'
      http:
        paths:
          - path: /
            backend:
              serviceName: wordpress-wordpress
              servicePort: 80
